--- a/package.json
+++ b/package.json
@@ -1,38 +1,57 @@
 {
-  "name": "flexy-next-free",
-  "version": "2.0.0",
+  "name": "ezyaccount",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "clean-metadata": "find . -name '._*' -delete",
+    "dev": "npx prisma generate --no-engine && next dev",
+    "build": "npm run clean-metadata && npx prisma generate --no-engine && next build",
     "start": "next start",
+    "production": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "11.11.0",
     "@emotion/react": "^11.13.3",
-    "@emotion/server": "11.11.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.6",
-    "@mui/lab": "^6.0.0-beta.14",
-    "@mui/material": "^6.1.6",
-    "@mui/x-data-grid": "^7.22.0",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/lab": "^6.0.0-beta.12",
+    "@mui/material": "^6.1.9",
+    "@mui/x-data-grid": "^7.21.0",
+    "@prisma/client": "^5.22.0",
     "@tabler/icons-react": "2.30.0",
-    "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "apexcharts": "3.41.1",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.46.0",
     "eslint-config-next": "^14.2.7",
+    "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
+    "formik-mui": "^5.0.0-alpha.1",
+    "jszip": "^3.10.1",
     "lodash": "4.17.21",
-    "next": "^14.2.18",
+    "lucide-react": "^0.453.0",
+    "mongodb": "^6.11.0",
+    "next": "^14.2.13",
+    "next-auth": "^4.24.7",
+    "punycode": "^2.3.1",
     "react": "^18.3.1",
-    "react-apexcharts": "1.4.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "1.3.0",
-    "typescript": "5.1.6"
+    "uuid": "^11.0.3",
+    "yup": "^1.4.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.196"
+    "@faker-js/faker": "^9.0.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
+    "@types/lodash": "4.14.196",
+    "@types/node": "^22.10.0",
+    "prisma": "^5.22.0",
+    "tsx": "^4.19.2",
+    "typescript": "5.7.2"
   }
 }
