--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.2.7",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "bson": "^6.10.0",
     "eslint": "8.46.0",
     "eslint-config-next": "^14.2.7",
     "file-saver": "^2.0.5",
