--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^4.24.7",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.6.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "1.3.0",
     "uuid": "^11.0.3",
