--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 DATABASE_URL="mysql://root:@localhost:3306/werehouse"
-NEXT_PUBLIC_API_KEY="9e18a8b7-aa1f-454e-a175-656aa785fc11"
-SECRET_API_KEY="f701fa2d-1003-4c19-a0bc-0a76cd426a61"
+
+# NEXT_PUBLIC_API_KEY="9e18a8b7-aa1f-454e-a175-656aa785fc11"
+# SECRET_API_KEY="f701fa2d-1003-4c19-a0bc-0a76cd426a61"
+
 NEXTAUTH_SECRET="ADOQRC3Gd0iMncVt1M/wSh1TarJfVVzln8FHtrSMUvQ="
+NEXTAUTH_URL="http://localhost:3000"
+
 MONGODB_URI="mongodb+srv://ezyaccount:<ezyaccount>@cluster0.ysd4hqh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
