--- a/package.json
+++ b/package.json
@@ -18,24 +18,33 @@
     "@mui/material": "^6.1.9",
     "@mui/x-data-grid": "^7.21.0",
     "@prisma/client": "^6.1.0",
+    "@react-oauth/google": "^0.12.1",
     "@tabler/icons-react": "2.30.0",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "bson": "^6.10.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "eslint": "8.46.0",
     "eslint-config-next": "^14.2.7",
     "exceljs": "^4.4.0",
+    "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "formik-mui": "^5.0.0-alpha.1",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "lodash": "4.17.21",
     "lucide-react": "^0.453.0",
-    "mongodb": "^6.11.0",
+    "mongodb": "4.1",
+    "mongoose": "^8.9.6",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.10.0",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
@@ -50,9 +59,13 @@
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.0",
     "@types/file-saver": "^2.0.7",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/lodash": "4.14.196",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.0",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^6.1.0",
     "tsx": "^4.19.2",
     "typescript": "5.7.2"
