--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^6.1.0",
     "@react-oauth/google": "^0.12.1",
     "@tabler/icons-react": "2.30.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "axios": "^1.7.7",
