--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "clean-metadata": "find . -name '._*' -delete",
-    "dev": "npx prisma generate --no-engine && npx prisma db push && next dev",
+    "dev": "npx prisma generate --no-engine && npx prisma db push && npx prisma db seed && next dev",
     "build": "npm run clean-metadata && next build",
     "docker": "docker build --platform linux/amd64 --build-arg NEXTAUTH_SECRET=NEXTAUTH_SECRET_FAKE --build-arg NEXTAUTH_SECRET=NEXTAUTH_SECRET_FAKE --build-arg NEXTAUTH_URL=NEXTAUTH_URL_FAKE -t thanapongc/project:repair . && docker push thanapongc/project:repair",
     "start": "next start",
@@ -18,7 +18,6 @@
     "@mui/material": "^6.3.1",
     "@mui/x-data-grid": "^7.21.0",
     "@mui/x-date-pickers": "^7.23.3",
-    "@prisma/client": "^6.3.0",
     "@react-pdf/renderer": "^3.4.4",
     "@tabler/icons-react": "2.30.0",
     "@tinymce/tinymce-react": "^5.1.1",
@@ -62,13 +61,14 @@
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
     "@mui/x-data-grid-generator": "^7.23.3",
+    "@prisma/client": "^6.3.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/email-templates": "^10.0.4",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "4.14.196",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
-    "prisma": "^6.3.0",
+    "prisma": "^6.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
