--- a/.env
+++ b/.env
@@ -2,6 +2,10 @@
 NEXTAUTH_SECRET = "ADOQRC3Gd0iMncVt1M/wSh1TarJfVVzln8FHtrSMUvQ="
 NEXTAUTH_URL = "http://localhost:3000"
 DATABASE_URL = "mongodb+srv://ezyaccount:N087oo6641405M@cluster0.ysd4hqh.mongodb.net/ezyaccount?retryWrites=true&w=majority&appName=Cluster0"
-
+JWT_SECRET=your-secret-key
+EMAIL=pankorn.lilearth@gmail.com
+EMAIL_PASSWORD=kxzi bvmp knlk fxfo
+GOOGLE_CLIENT_ID=142235771487-6urrau6gn7nc1uo0gejqk9otqmd47vs9.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 
