--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run clean-metadata && next build",
     "docker": "docker build --platform linux/amd64 --build-arg NEXTAUTH_SECRET=NEXTAUTH_SECRET_FAKE --build-arg NEXTAUTH_SECRET=NEXTAUTH_SECRET_FAKE --build-arg NEXTAUTH_URL=NEXTAUTH_URL_FAKE -t thanapongc/project:repair . && docker push thanapongc/project:repair",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -27,6 +28,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "email-templates": "^12.0.1",
     "eslint": "8.46.0",
     "eslint-config-next": "^14.2.7",
@@ -39,6 +41,7 @@
     "jspdf-autotable": "^3.8.3",
     "lodash": "4.17.21",
     "lucide-react": "^0.453.0",
+    "mongodb": "^6.13.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
@@ -52,6 +55,7 @@
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "1.3.0",
     "recharts": "^2.12.7",
+    "validator": "^13.12.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "yup": "^1.6.1"
   },
@@ -68,8 +72,9 @@
     "@types/lodash": "4.14.196",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
+    "@types/validator": "^13.12.2",
     "prisma": "^6.3.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   }
 }
