--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "mongodb": "^6.11.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
+    "next-intl": "^4.3.4",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "1.3.0",
     "uuid": "^11.0.3",
