--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "^14.2.7",
     "express-rate-limit": "^7.5.0",
+    "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "formik": "^2.4.6",
     "formik-mui": "^5.0.0-alpha.1",
