--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@prisma/client": "^6.11.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/email-templates": "^10.0.4",
+    "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "4.14.196",
     "@types/node": "^22.10.2",
