--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "clean-metadata": "find . -name '._*' -delete",
+    "clean-metadata": "echo 'Skipping clean-metadata on Windows'",
     "dev": "npx prisma generate --no-engine && npx prisma db push && npx prisma db seed && next dev",
-    "build": "npm run clean-metadata && next build",
+    "build": "next build",
     "docker": "docker build --platform linux/amd64 --build-arg NEXTAUTH_SECRET=NEXTAUTH_SECRET_FAKE --build-arg NEXTAUTH_SECRET=NEXTAUTH_SECRET_FAKE --build-arg NEXTAUTH_URL=NEXTAUTH_URL_FAKE -t thanapongc/project:repair . && docker push thanapongc/project:repair",
     "start": "next start",
     "lint": "next lint",
