--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^7.21.0",
     "@mui/x-date-pickers": "^8.0.0",
     "@prisma/client": "6.17.1",
+    "@swc/helpers": "^0.5.18",
     "@tabler/icons-react": "2.30.0",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -31,6 +32,7 @@
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "formik-mui": "^5.0.0-alpha.1",
+    "html2pdf.js": "^0.14.0",
     "jszip": "^3.10.1",
     "lodash": "4.17.21",
     "lucide-react": "^0.453.0",
@@ -46,7 +48,7 @@
     "uuid": "^11.0.3",
     "yup": "^1.4.0"
   },
-    "prisma": {
+  "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "devDependencies": {
