--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "formik": "^2.4.6",
     "formik-mui": "^5.0.0-alpha.1",
     "html2pdf.js": "^0.14.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "jszip": "^3.10.1",
     "lodash": "4.17.21",
     "lucide-react": "^0.453.0",
