--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "1.3.0",
+    "sweetalert2": "^11.26.17",
     "uuid": "^11.0.3",
     "yup": "^1.4.0"
   },
